# arithmetica

./: .gitattributes  .gitignore  clean.sh
src/: CMakeLists.txt  common.h  compute.c  compute.h  main.c  queue_utils.h  ui.c  ui.h
